<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Wikitrack!</string>
    <string name="app_name">Wikitrack English</string>
    <string name="en_more_apps">"More Apps "</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="wltoken_hint_text">wltoken</string>
    <string name="error_msg_in_fetching_feed">Error in fetching feed</string>
    <string name="error_msg_internet_unavailable">Couldn\'t connect. Check internet connection.</string>
    <string name="copyright_saaranga_infotech">© Saaranga Infotech LLP</string>
    <string name="en_about_application_summary">About this application</string>
    <string name="en_about_application_title">Application</string>
    <string name="en_about_developer_summary">"About the developer of this application "</string>
    <string name="en_about_developer_title">Developer</string>
    <string name="en_settings">SETTINGS</string>
    <string name="en_enter_valid_uname_pswd">Please Enter valid username and password</string>
    <string name="en_enter_valid_uname_token_id">Please Enter valid username and token</string>
    <string name="en_about_developer">&lt;p>Saaranga Infotech LLP is a little start-up software company based in Bengaluru.&lt;/p>&lt;p>Saaranga Infotech LLP, with promoters having expertise in the domain for close to a decade, helps SMEs, Non-profits to build a strong presence on the web coupled with rich mobile and social media tools. Saaranga Infotech LLP has been primarily focusing on open source technologies and &amp;nbsp;the platform the team has developed serves numerous non-profits and SMEs globally with hosted services based on open source applications. The company is well-known for its work on technology for Indian languages, the latest additions to this profile being mobile apps (Android) in many Indian languages.&lt;/p>&lt;p>&lt;/p>&lt;div>For more information Get in touch (http://saaranga.com/) with us&lt;/div>&lt;div>Click here on the link(http://saaranga.com/contact-us) for our postal address and location map&lt;/div></string>
    <string name="en_my_watchlist_label">My watchlist</string>
    <string name="en_favorite_pages">Favorites</string>
    <string name="en_pref_deletedb_title">Delete database</string>
    <string name="en_pref_deletedb_message">You are going to delete application database which will remove your favorite items and settings. Proceed with caution.</string>
    <string name="en_erase">ERASE</string>
    <string name="en_clear">CLEAR</string>
    <string name="en_return">BACK</string>
    <string name="en_delete">DELETE</string>
    <string name="en_clear_cache">Clear cache</string>
    <string name="en_delete_data">Delete data</string>
    <string name="en_clear_cache_message">This will clear the web cache in your application. It will not affect your app database.</string>
    <string name="en_erase_private_data_title">Erase private data</string>
    <string name="en_erase_private_data_message">Delete your saved username and passwords</string>
    <string name="en_article_share_message">Read in Wikitrack app: </string>
    <string name="en_recent_changes">Recent changes</string>
    <string name="en_my_contributions">My Contributions</string>
    <string name="en_my_watchlist">My watchlist</string>
    <string name="en_enter_username_title">My Contributions </string>
    <string name="en_enter_username_message">Please enter your  username</string>
    <string name="en_okay_btn">OK</string>
    <string name="en_cancel">CANCEL</string>
    <string name="wiki_track">Wikitrack </string>
    <string name="en_get_feed">LOAD</string>
    <string name="en_enter_token">ENTER TOKEN</string>
    <string name="en_login">LOGIN</string>
    <string name="en_pls_wait">Loading...</string>
    <string name="en_loading">Please wait</string>
    <string name="en_username_enter">Please enter your username </string>
    <string name="en_username_example">For example: supreethks </string>
    <string name="en_enter_wltoken">Please enter the watchlist token.</string>
    <string name="en_password_enter">Please enter your password </string>
    <string name="en_mc_notfeed_text">There are no entries in the database. Please enter your username to get your contributions list.</string>
    <string name="en_rc_notfeed_text">There are no entries in the database.</string>
    <string name="en_wl_notfeed_text">There are no entries in the database.Please enter your username and wltoken or login to your account to get your watchlist.</string>
    <string name="en_wl_notfeed_text_token">There are no entries in the database.Please enter your username and watchlist token to get your watchlist.</string>
    <string name="en_save_passwrd">save password</string>
    <string name="en_setting_wltoken">HOW TO SET WLTOKEN</string>
    <string name="en_more_todo">What do you want to do?</string>
    <string name="en_mark_as">Mark</string>
    <string name="en_app_name">Wikitrack</string>
    <string name="android_preference:category_sync">Sync preference </string>
    <string name="android_preference:category_itemCount">Feed count </string>
    <string name="android_preferences:default">Default </string>
    <string name="android_preference:select_font">Change font </string>
    <string name="android_preference:category_font_prefs">Font preference</string>
    <string name="android_preference:set_feed_count">Fix feed count </string>
    <string name="android_preferences:sync_background">Sync in background </string>
    <string name="preferences_activitiy_label">Preferences </string>
    <string name="preferences_sync_interval">Sync frequency </string>
    <string name="string:how_frequently">How frrequently should the feed refresh? </string>
    <string name="preference:feed_count">Feed count</string>
    <string name="preference:feed_options">Choose feed </string>
    <string name="stirng:how_many_feed_items_you_want">Choose the feed count </string>
    <string name="String:choose_the_contents_of_feed">Change feed details </string>
    <string name="en_my_contributions_label">My contributions</string>

    <!-- specific to language -->
    <string name="kannada_title">ಕನ್ನಡ</string>

</resources>